# Sathi-Ai-agent-setup

./: .env.example  .gitignore  COMMERCIAL_SALE_LICENSING.md  Dockerfile  Dockerfile.backend  PLAY_STORE_PUBLISH _GUIDE.md  PUBLIC_REPO_README.md  README.md  Vite.config.ts  capacitor.config.ts  config.yaml  docker-compose.yml  errors.py  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts  tsconfig.json
Android/: .gitignore  build.gradle  settings.gradle  variables.gradle
Android/app/: .gitignore  build.gradle   capacitor.build.gradle  proguard-rules.pro
Android/capacitor-cordova-android-plugins/: tjff
Android/gradle/wrapper/: gradle-wrapper.properties
Sathi-Ai-agent-setup/: Ai
ai-core/: README.md
src/: components
srs/components/: Authview.tsx  Channelview.tsx  CodeStudio.tsx  DocumenttationView.tsx  EvolutionView.tsx
